--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -9,6 +9,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 
+	<link rel="preload" href="style.min.css" as="style">
+	<link rel="preload" href="./css/bootstrap.min.css" as="style">
+	<link rel="preload" href="./css/font-awesome.min.css" as="style">
+	<link rel="preload" href="./css/et-line.min.css" as="style">
+
+	
+	<link rel="preload" href="./fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin="anonymous">
+
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -258,7 +266,7 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=en"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
