critical css updated

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -7,7 +7,9 @@
 		content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
 	<meta name="description" content="I'm Mike and your should hire me to build your website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<title>Go Mike Designs</title>
 
+	<link rel="preload" href="critical-css.css" as="style">
 
 	<link rel="preload" href="style.min.css" as="style">
 	<link rel="preload" href="./css/bootstrap.min.css" as="style">
@@ -16,6 +18,7 @@
 
 	
 	<link rel="preload" href="./fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/et-line.woff" as="font" type="font/woff" crossorigin="anonymous">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 
@@ -24,10 +27,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-	<title>Go Mike Designs</title>
 </head>
 
 <body>
+	
 	<!-- Main container -->
 	<div class="page-container">
 
@@ -70,8 +73,8 @@
 
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/atlanta%20web%20designer%20mike.webp" class="center-block image-resize-mode"
-							width="100"
+						<img src="img/atlanta web designer mike.webp" class="center-block image-resize-mode"
+						width="100"
 							alt="atlanta web designer mike,seo, google, website, internet, web design, design agency">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							I'm Mike.
