changed css preload

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -10,22 +10,17 @@
 	<title>Go Mike Designs</title>
 
 	<link rel="preload" href="critical-css.css" as="style">
-
-	<link rel="preload" href="style.min.css" as="style">
-	<link rel="preload" href="./css/bootstrap.min.css" as="style">
-	<link rel="preload" href="./css/font-awesome.min.css" as="style">
-	<link rel="preload" href="./css/et-line.min.css" as="style">
-
+	<link rel="preload" as="image" href="img/atlanta made sign.webp">
 	
 	<link rel="preload" href="./fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" href="./fonts/et-line.woff" as="font" type="font/woff" crossorigin="anonymous">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="preload stylesheet" type="text/css" href="./css/bootstrap.min.css" as="style">
+	<link rel="preload stylesheet" type="text/css" href="style.min.css" as="style">
+	<link rel="preload stylesheet" type="text/css" href="./css/font-awesome.min.css" as="style">
+	<link rel="preload stylesheet" type="text/css" href="./css/et-line.min.css" as="style">
 
 </head>
 
@@ -74,7 +69,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/atlanta web designer mike.webp" class="center-block image-resize-mode"
-						width="100"
+						width="100px" height="auto"
 							alt="atlanta web designer mike,seo, google, website, internet, web design, design agency">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							I'm Mike.
@@ -303,12 +298,12 @@
 	<!-- Main container END -->
 
 
-	
+<!-- 	
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.min.js"></script>
-	<script src="./js/gmaps.min.js"></script>
+	<script src="./js/gmaps.min.js"></script> -->
 </body>
 
 </html>
