img heigh width defined

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -28,6 +28,14 @@
 	
 	<!-- Main container -->
 	<div class="page-container">
+		<div class="preload">
+			<img src="img/atlanta%20web%20design%20logo.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/atlanta made sign orange.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/atlanta made sign.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/4.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/texture-paper.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/atlanta web designer mike.webp" alt="atlanta logo" width="0" height="0">
+		</div>
 
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
