last img heigh/width defined

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -35,6 +35,7 @@
 			<img src="img/4.webp" alt="atlanta logo" width="0" height="0">
 			<img src="img/texture-paper.webp" alt="atlanta logo" width="0" height="0">
 			<img src="img/atlanta web designer mike.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/atlanta web design logo.webp" alt="atlanta logo" width="0" height="0">
 		</div>
 
 		<!-- bloc-0 -->
