--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -15,7 +15,7 @@
 	<link rel="preload" href="./fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" href="./fonts/et-line.woff" as="font" type="font/woff" crossorigin="anonymous">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.webp">
+	<link rel="shortcut icon" type="image/webp" href="favicon.webp">
 
 	<link rel="preload stylesheet" type="text/css" href="./css/bootstrap.min.css" as="style">
 	<link rel="preload stylesheet" type="text/css" href="style.min.css" as="style">
@@ -35,7 +35,7 @@
 			<img src="img/4.webp" alt="atlanta logo" width="0" height="0">
 			<img src="img/texture-paper.webp" alt="atlanta logo" width="0" height="0">
 			<img src="img/atlanta web designer mike.webp" alt="atlanta logo" width="0" height="0">
-			<img src="img/atlanta web design logo.webp" alt="atlanta logo" width="0" height="0">
+			<img src="img/atlanta web design logo.webp" alt="atlanta loggo" width="0" height="0">
 		</div>
 
 		<!-- bloc-0 -->
@@ -43,7 +43,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp"
+						<a class="navbar-brand" href="index.html"><img src="img/atlanta web design logo.webp"
 								alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 						<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web
 							design, logo, website, web, internet, logo design</div>
