--- a/P4-Project-Updates/page2.html
+++ b/P4-Project-Updates/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -8,123 +8,151 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/webp" href="favicon.webp">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="preload" as="image" href="img/atlanta made sign.webp">
+	<link rel="preload" href="./fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2"
+		crossorigin="anonymous">
 
-    <title>Contacts</title>
+	<link rel="preload stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="preload stylesheet" type="text/css" href="style.min.css">
+	<link rel="preload stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="preload stylesheet" type="text/css" href="./css/et-line.min.css">
+
+	<title>Contacts</title>
 
 </head>
 
 <body>
 	<!-- Main container -->
 	<div class="page-container">
+		<div class="preload">
+			<img src="img/atlanta web design logo.webp" alt="atlantas logo" width="0" height="0">
+			<img src="img/atlanta made sign.webp" alt="atlanta logos" width="0" height="0">
+		</div>
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp"
-								height="40" /></a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-							data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-								class="icon-bar"></span><span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Home</a>
-							</li>
-							<li>
-								<a href="page2.html">Contacts</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
+		<nav>
+			<div class="bloc bgc-white l-bloc " id="bloc-0">
+				<div class="container bloc-sm">
+					<nav class="navbar row">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="index.html"><img src="img/atlanta web design logo.webp"
+									alt="logo, seo, google, website, internet, web design, design agency"
+									height="40" /></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+								data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+									class="icon-bar"></span><span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+							<ul class="site-navigation nav navbar-nav">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li>
+									<a href="page2.html">Contact Page</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</div>
 			</div>
-		</div>
+		</nav>
 		<!-- bloc-0 END -->
 
 		<!-- bloc-6 -->
-		<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper bg-atlanta-20made-20sign" id="bloc-6">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center hero-bloc-text tc-white">
-							Let&rsquo;s talk web design!
-						</p>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
-							I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or
-							get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk
-							websites and Atlanta city love.
-						</p>
+		<header>
+			<div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper bg-atlanta-20made-20sign"
+				id="bloc-6">
+				<div class="container bloc-lg">
+					<div class="row">
+						<div class="col-sm-12">
+							<p class="text-center hero-bloc-text tc-white">
+								Let&rsquo;s talk web design!
+							</p>
+							<p class="text-center mg-lg tc-white tight-width-whitespace">
+								I&rsquo;m super excited that you want to work together.<br>Please fill in the form below
+								or
+								get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk
+								websites and Atlanta city love.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</header>
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
-			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-							<div class="form-group">
-								<label>
-									Name
-								</label>
-								<input id="name" class="form-control" required />
-							</div>
-							<div class="form-group">
-								<label>
-									Email
-								</label>
-								<input id="email" class="form-control" type="email" required />
-							</div>
-							<div class="form-group">
-								<label>
-									How did you find me?
-								</label>
-								<input class="form-control" type="email" required id="input_504" />
-							</div>
-							<div class="form-group">
-								<label>
-									Project brief (Please be as detailed as possible including your company goals and
-									any improvements you&rsquo;d like to have over your current website)<br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50"
-									required></textarea>
-							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-								type="submit">
-								Let's go Mike
-							</button>
-						</form>
+		<main>
+			<div class="bloc bgc-white l-bloc" id="bloc-7">
+				<div class="container bloc-lg">
+					<div class="row">
+						<div class="col-sm-6">
+							<form id="form_1" novalidate success-msg="Your message has been sent."
+								fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+
+								<div class="form-group">
+									<label class="lable-text">
+										Name
+									</label>
+									<input id="name" class="form-control" required />
+								</div>
+
+
+								<div class="form-group">
+									<label class="lable-text">
+										Email
+									</label>
+									<input id="email" class="form-control" type="email" required />
+								</div>
+								<div class="form-group">
+									<label class="lable-text">
+										How did you find me?
+									</label>
+									<input class="form-control" type="email" required id="input_504" />
+								</div>
+								<div class="form-group">
+									<label class="lable-text">
+										Project brief (Please be as detailed as possible including your company
+										goals
+										and
+										any improvements you&rsquo;d like to have over your current website)<br>
+									</label><textarea id="message" class="form-control" rows="4" cols="50"
+										required></textarea>
+								</div>
+								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+									type="submit">
+									Let's go Mike
+								</button>
+							</form>
+
+
+						</div>
 					</div>
 					<div class="col-sm-6">
-						<p>
+						<p class="contact-info">
 							mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta,
-							GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services?
-							<br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html">other page</a>.
+							GA<br>Available 9am–5pm, Mon-Fri <br> <br><br>Interested to learn about my freelace
+							services?
+							<br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html"><u>other</u>
+								page</a>.
 						</p>
 					</div>
 				</div>
 			</div>
-		</div>
-		<!-- bloc-7 END -->
+		</main>
+	</div>
 
-		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
-		<!-- ScrollToTop Button END-->
+	<!-- bloc-7 END -->
+
+	<!-- ScrollToTop Button -->
+	<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+			class="fa fa-chevron-up"></span></a>
+	<!-- ScrollToTop Button END-->
 
 
-		<!-- Footer - bloc-8 -->
+	<footer>
 		<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
@@ -135,22 +163,25 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com/?lang=en"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com/?lang=en" aria-label="Read more about Seminole tax hike"></a><span
+											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com/" aria-label="Read more about Seminole tax hike"></a><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com/" aria-label="Read more about Seminole tax hike"></a><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com/"><span
+									<a class="social" href="https://www.instagram.com/" aria-label="Read more about Seminole tax hike"></a><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
@@ -159,7 +190,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- Footer - bloc-8 END -->
+	</footer>
 
 	</div>
 	<!-- Main container END -->
