Media Q added for Mobile "res 738"

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -60,7 +60,7 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact Page</a>
+								<a href="Contact-page.html">Contact Page</a>
 							</li>
 						</ul>
 					</div>
@@ -84,7 +84,7 @@
 							I'm Mike.
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="Contact-page.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
 					</div>
@@ -171,7 +171,7 @@
 							business that are either starting or needing to renew their website to attract business.
 							Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work
 							with you to create something that looks great and structured to be found on
-							Google.<br><br><a class="ltc-white bold-link" href="page2.html">Are you ready, contact
+							Google.<br><br><a class="ltc-white bold-link" href="Contact-page.html">Are you ready, contact
 								me</a><br>
 						</p>
 					</div>
@@ -223,7 +223,7 @@
 								alt="3.webp" /></a>
 						<h3 class="mg-md text-center">
 							New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
-						</h3>
+						</h3>²----++--+---²²²
 						<p class="text-center">
 							Whenever I&rsquo;m wanting to improve my web design skills, this shop inspires me.
 						</p>
@@ -254,7 +254,7 @@
 						Ready for a great website? <br>Let&rsquo;s design!
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html"
+						<a href="Contact-page.html"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
