Media Q for mobile "home and contact page"

--- a/P4-Project-Updates/Contact-page.html
+++ b/P4-Project-Updates/Contact-page.html
@@ -135,7 +135,9 @@
 							mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta,
 							GA<br>Available 9am–5pm, Mon-Fri <br> <br><br>Interested to learn about my freelace
 							services?
-							<br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html"><u>other</u>
+							<br>
+							<br>
+							<a class="ltc-atomic-tangerine" href="index.html">Please visit my&nbsp;<u>other</u>
 								page</a>.
 						</p>
 					</div>
