--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -70,7 +70,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-hero -->
-		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign-20orange d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 
 			<div class="container bloc-lg">
@@ -223,7 +223,7 @@
 								alt="3.webp" /></a>
 						<h3 class="mg-md text-center">
 							New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
-						</h3>²----++--+---²²²
+						</h3>
 						<p class="text-center">
 							Whenever I&rsquo;m wanting to improve my web design skills, this shop inspires me.
 						</p>
@@ -246,7 +246,7 @@
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
-		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper"
+		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper">
 			id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
