--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -70,7 +70,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-hero -->
-		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign-20orange d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 
 			<div class="container bloc-lg">
@@ -78,7 +78,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/atlanta web designer mike.webp" class="center-block image-resize-mode"
-						width="100px" height="auto"
+						width="100px" 
 							alt="atlanta web designer mike,seo, google, website, internet, web design, design agency">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							I'm Mike.
@@ -246,7 +246,7 @@
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
-		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper">
+		<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper"
 			id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
