MQ contact page-aligned/centered

--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -60,7 +60,7 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li>
-								<a href="Contact-page.html">Contact Page</a>
+								<a href="Contact-page.html">Contacts</a>
 							</li>
 						</ul>
 					</div>
