--- a/P4-Project-Updates/Contact-page.html
+++ b/P4-Project-Updates/Contact-page.html
@@ -50,7 +50,7 @@
 									<a href="index.html">Home</a>
 								</li>
 								<li>
-									<a href="page2.html">Contact Page</a>
+									<a href="Contact-page.html">Contacts</a>
 								</li>
 							</ul>
 						</div>
@@ -86,7 +86,7 @@
 		<!-- bloc-7 -->
 		<main>
 			<div class="bloc bgc-white l-bloc" id="bloc-7">
-				<div class="container bloc-lg">
+				<div class="container bloc-lg-contact">
 					<div class="row">
 						<div class="col-sm-6">
 							<form id="form_1" novalidate success-msg="Your message has been sent."
