contact page label fixed "added ! for="name" !

--- a/P4-Project-Updates/Contact-page.html
+++ b/P4-Project-Updates/Contact-page.html
@@ -93,7 +93,7 @@
 								fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 
 								<div class="form-group">
-									<label class="lable-text">
+									<label for="name" class="lable-text">
 										Name
 									</label>
 									<input id="name" class="form-control" required />
@@ -101,19 +101,19 @@
 
 
 								<div class="form-group">
-									<label class="lable-text">
+									<label for="email" class="lable-text">
 										Email
 									</label>
 									<input id="email" class="form-control" type="email" required />
 								</div>
 								<div class="form-group">
-									<label class="lable-text">
+									<label for="input_504" class="lable-text">
 										How did you find me?
 									</label>
 									<input class="form-control" type="email" required id="input_504" />
 								</div>
 								<div class="form-group">
-									<label class="lable-text">
+									<label for="message" class="lable-text">
 										Project brief (Please be as detailed as possible including your company
 										goals
 										and
